--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   webview_flutter: ^0.3.3
   autocomplete_textfield: ^1.6.4
   flutter_typeahead: ^3.2.0
+  cached_network_image: ^3.0.0
 
 dev_dependencies:
   flutter_test:
