--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   # keyboard handling
   flutter_keyboard_visibility: ^5.0.3
 
+  #Sqflite
+  sqflite:
+  share: ^2.0.1
+
   # firebase config
   firebase_messaging: ^10.0.4
   firebase_core: ^1.4.0
