--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   cached_network_image: ^3.0.0
   infinite_scroll_pagination: ^3.0.1
   dotted_line: ^3.0.0
+  material_floating_search_bar: ^0.3.4
 
 dev_dependencies:
   flutter_test:
