--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
 
 
   percent_indicator: ^3.0.1
-  webview_flutter: ^0.3.3
+  webview_flutter_plus: ^0.2.3
   autocomplete_textfield: ^1.6.4
   flutter_typeahead: ^3.2.0
   cached_network_image: ^3.0.0
@@ -86,6 +86,13 @@ flutter:
     - assets/images/
     - assets/images/drawable-ldpi/
     - assets/images/drawable-xxhdpi/
+    - assets/storypage/
+    - assets/storypage/css/
+    - assets/storypage/font-my/
+    - assets/storypage/images/
+    - assets/storypage/js/
+    - assets/storypage/pages/
+    - assets/storypage/tts_anim/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
