--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.riseuplabs.ureport.ureport_ecaro">
    <application
+
         android:label="ureport_ecaro"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -42,5 +43,10 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+
+       <meta-data
+           android:name="com.google.firebase.messaging.default_notification_channel_id"
+           android:value="noor" />
     </application>
 </manifest>
