--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   # state management
-  provider: ^5.0.0
+  provider: ^4.1.0
   # nettwork handling
   dio: ^4.0.0
   http: ^0.13.3
@@ -58,12 +58,14 @@ dependencies:
 
 
   percent_indicator: ^3.0.1
-  webview_flutter: ^0.3.3
-  autocomplete_textfield: ^1.6.4
+#  webview_flutter: ^0.3.3
+ # autocomplete_textfield: ^1.6.4
+  webview_flutter: ^2.0.12
   flutter_typeahead: ^3.2.0
   cached_network_image: ^3.0.0
   infinite_scroll_pagination: ^3.0.1
   dotted_line: ^3.0.0
+  get: ^4.3.8
 
 dev_dependencies:
   flutter_test:
