--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   dotted_line: ^3.0.0
   material_floating_search_bar: ^0.3.4
   audioplayers: ^0.20.1
+  flutter_scatter: ^0.2.0
 
 dev_dependencies:
   flutter_test:
