--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   material_floating_search_bar: ^0.3.4
   audioplayers: ^0.20.1
   flutter_scatter: ^0.2.0
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
