--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   audioplayers: ^0.20.1
   flutter_scatter: ^0.2.0
   connectivity: ^3.0.6
+  hexcolor: ^1.0.4
 
 dev_dependencies:
   flutter_test:
