--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   flutter_scatter: ^0.2.0
   connectivity: ^3.0.6
   hexcolor: ^1.0.4
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
