--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+4
+version: 1.0.0+5
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -65,7 +65,7 @@ dependencies:
   infinite_scroll_pagination: ^3.0.1
   dotted_line: ^3.0.0
   material_floating_search_bar: ^0.3.4
-  audioplayers: ^0.20.1
+  audioplayers:
   flutter_scatter: ^0.2.0
   connectivity: ^3.0.6
   hexcolor: ^1.0.4
