--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+10
+version: 1.0.12
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -73,6 +73,7 @@ dependencies:
   url_launcher: ^4.0.0
   keyboard_visibility: ^0.5.2
   lottie: ^1.2.1
+  package_info_plus: any
 
 dev_dependencies:
   flutter_test:
