--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,10 +74,16 @@ dependencies:
   keyboard_visibility: ^0.5.2
   lottie: ^1.2.1
   package_info_plus: any
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
