--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.13
+version: 3.0.1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -56,7 +56,6 @@ dependencies:
   #Remote config
   firebase_remote_config: ^0.10.0+5
 
-
   percent_indicator: ^3.0.1
   webview_flutter_plus: ^0.2.3
   autocomplete_textfield: ^1.6.4
@@ -75,6 +74,7 @@ dependencies:
   lottie: ^1.2.1
   package_info_plus: any
   flutter_launcher_icons: ^0.9.2
+  permission_handler: ^8.3.0
 
 dev_dependencies:
   flutter_test:
