--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.riseuplabs.ureport.ureport_ecaro">
    <application
-        android:label="U-Report Online"
+        android:label="U-Report"
        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
         <activity
