--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.riseuplabs.ureport.ureport_ecaro">
+    package="in.ureport">
    <application
         android:label="U-Report"
        android:usesCleartextTraffic="true"
