--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 3.0.1
+version: 3.0.5+2
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -28,7 +28,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
   # state management
   provider: ^5.0.0
   # nettwork handling
@@ -39,7 +38,7 @@ dependencies:
   # storage handling
   get_storage: ^2.0.3
   # keyboard handling
-  flutter_keyboard_visibility: ^5.0.3
+  flutter_keyboard_visibility: ^5.1.0
   #Sqflite
   sqflite:
   share: ^2.0.1
@@ -49,9 +48,10 @@ dependencies:
 
   # firebase config
   firebase_messaging: ^10.0.4
-  firebase_core: ^1.4.0
+  firebase_core: ^1.10.0
   flutter_local_notifications: ^6.1.0
   firebase_analytics: ^8.3.1
+  firebase_crashlytics: ^2.3.0
 
   #Remote config
   firebase_remote_config: ^0.10.0+5
@@ -67,14 +67,15 @@ dependencies:
   audioplayers:
   flutter_scatter: ^0.2.0
   connectivity: ^3.0.6
-  hexcolor: ^1.0.4
+  hexcolor: ^2.0.5
   flutter_spinkit: ^5.1.0
-  url_launcher: ^4.0.0
-  keyboard_visibility: ^0.5.2
+  url_launcher: ^6.0.15
+  keyboard_visibility: any
   lottie: ^1.2.1
   package_info_plus: any
   flutter_launcher_icons: ^0.9.2
   permission_handler: ^8.3.0
+
 
 dev_dependencies:
   flutter_test:
