--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 3.0.5+2
+version: 1.0.0+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -48,10 +48,10 @@ dependencies:
 
   # firebase config
   firebase_messaging: ^10.0.4
-  firebase_core: ^1.10.0
+  firebase_core: ^1.4.0
   flutter_local_notifications: ^6.1.0
   firebase_analytics: ^8.3.1
-  firebase_crashlytics: ^2.3.0
+  firebase_crashlytics: any
 
   #Remote config
   firebase_remote_config: ^0.10.0+5
