--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -23,7 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,10 +46,11 @@ dependencies:
     sdk: flutter
 
   # firebase config
-  firebase_messaging: ^10.0.4
+  firebase_messaging: ^13.0.4
   firebase_core: ^1.4.0
   flutter_local_notifications: ^6.1.0
   firebase_analytics: ^8.3.1
+  firebase_core_platform_interface: 4.5.1
   firebase_crashlytics: any
 
   #Remote config
@@ -64,7 +64,7 @@ dependencies:
   infinite_scroll_pagination: ^3.0.1
   dotted_line: ^3.0.0
   material_floating_search_bar: ^0.3.4
-  audioplayers:
+  audioplayers: 
   flutter_scatter: ^0.2.0
   connectivity: ^3.0.6
   hexcolor: ^2.0.5
@@ -75,6 +75,7 @@ dependencies:
   package_info_plus: any
   flutter_launcher_icons: ^0.9.2
   permission_handler: ^8.3.0
+  validators: ^3.0.0
 
 
 dev_dependencies:
@@ -99,6 +100,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/images/
     - assets/images/drawable-ldpi/
     - assets/images/drawable-xxhdpi/
@@ -147,5 +149,3 @@ flutter:
           weight: 800
         - asset: assets/font/Montserrat-Light.ttf
           weight: 300
-
-
