--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   # state management
-  provider: ^5.0.0
+  provider: ^6.0.4
   # nettwork handling
   dio: ^4.0.0
   http: ^0.13.3
@@ -46,20 +46,20 @@ dependencies:
     sdk: flutter
 
   # firebase config
-  firebase_messaging: ^13.0.4
-  firebase_core: ^1.4.0
-  flutter_local_notifications: ^6.1.0
-  firebase_analytics: ^8.3.1
-  firebase_core_platform_interface: 4.5.1
+  firebase_messaging: ^14.1.0
+  firebase_core: ^2.2.0
+  flutter_local_notifications: ^12.0.3
+  firebase_analytics: ^10.0.5
+  firebase_core_platform_interface: ^4.5.2
   firebase_crashlytics: any
 
   #Remote config
-  firebase_remote_config: ^0.10.0+5
+  firebase_remote_config: ^3.0.5
 
-  percent_indicator: ^3.0.1
-  webview_flutter_plus: ^0.2.3
-  autocomplete_textfield: ^1.6.4
-  flutter_typeahead: ^3.2.0
+  percent_indicator: ^4.2.2
+  webview_flutter_plus: ^0.3.0+2
+  autocomplete_textfield: ^2.0.1
+  flutter_typeahead: ^4.1.1
   cached_network_image: ^3.0.0
   infinite_scroll_pagination: ^3.0.1
   dotted_line: ^3.0.0
@@ -67,14 +67,14 @@ dependencies:
   audioplayers: 
   flutter_scatter: ^0.2.0
   connectivity: ^3.0.6
-  hexcolor: ^2.0.5
+  hexcolor: ^3.0.1
   flutter_spinkit: ^5.1.0
   url_launcher: ^6.0.15
   keyboard_visibility: any
-  lottie: ^1.2.1
+  lottie: ^2.0.0
   package_info_plus: any
-  flutter_launcher_icons: ^0.9.2
-  permission_handler: ^8.3.0
+  flutter_launcher_icons: ^0.10.0
+  permission_handler: ^10.2.0
   validators: ^3.0.0
 
 
